# loom

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
docs/: INTEGRATION.md  INTEGRATION.zh-CN.md  PRODUCT.md  PRODUCT.zh-CN.md
docs/superpowers/plans/: 2026-06-05-loom-development-plan.md
docs/test-reports/: 2026-06-09-m1-cli-manual-test.md  2026-06-09-m2-search-graph-manual-test.md  2026-06-10-m3-e2e-agent-driven-ingest.md  2026-06-10-m4-lint-agent-flow.md  2026-06-11-m5-consistency-safety-acceptance.md  2026-06-11-m6-bm25-vector-gate.md
examples/: agent_via_cli.md  agent_via_mcp.json  standalone_auto.py
src/loom/: __init__.py  api.py  clock.py  config.py  errors.py  models.py  validate.py
src/loom/auto/: orchestrator.py  providers.py
src/loom/core/: fsutil.py  graph.py  hash.py  index.py  lock.py  log.py  scaffold.py  sections.py  store.py
src/loom/lint/: candidates.py  fix.py  structural.py
src/loom/parsers/: __init__.py  docx.py  html.py  markdown.py  pdf.py
src/loom/review/: queue.py
src/loom/search/: keyword.py  related.py  tokenize.py
src/loom/security/: citations.py  untrusted.py
src/loom/templates/blank/: purpose.md  schema.md
src/loom/templates/personal/: purpose.md  schema.md
src/loom/templates/research/: purpose.md  schema.md
src/loom/transport/: cli.py  mcp.py
tests/: conftest.py  test_api_integration.py  test_config.py  test_models.py  test_smoke.py  test_validate.py
tests/auto/: test_orchestrator.py
tests/core/: conftest.py  test_concurrency.py  test_fsutil.py  test_graph.py  test_hash.py  test_index.py  test_log.py  test_occ_flow.py  test_scaffold.py  test_sections.py  test_store_read.py  test_store_update.py  test_store_write.py  test_templates.py
tests/e2e/: CHECKLIST.md
tests/e2e/fixtures/: article-a.md  article-b.md
tests/lint/: test_candidates.py  test_fix.py  test_structural.py
tests/parsers/: test_docx.py  test_html.py  test_parsers.py
tests/review/: test_queue.py
tests/search/: test_keyword.py  test_perf.py  test_related.py  test_tokenize.py
tests/security/: test_citations.py  test_untrusted.py
tests/transport/: conftest.py  test_cli_init.py  test_cli_lint.py  test_cli_read.py  test_cli_search.py  test_cli_write.py  test_mcp.py
