[project]
name = "loom-wiki"            # PyPI 发布名（"loom" 大概率被占，M6 发布前最终确认）
version = "0.1.0"
description = "An embeddable, brainless toolkit that lets any agent maintain an LLM Wiki — weave your knowledge, not just notes."
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
  "pydantic>=2.7",
  "click>=8.1",
  "pyyaml>=6",
  "filelock>=3.13",
  "jieba>=0.42",
  "rank-bm25>=0.2",
  "mcp>=1.2",
  "pdfplumber>=0.11",
]

[project.optional-dependencies]
auto = ["anthropic>=0.40", "openai>=1.40"]
vector = ["numpy>=1.26", "httpx>=0.27"]

[project.scripts]
loom = "loom.transport.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loom"]

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "fpdf2>=2.7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["e2e: 需要真实 agent/人工参与的端到端验收，默认不跑"]
addopts = "-m 'not e2e'"

[tool.ruff]
line-length = 100
target-version = "py311"
