[project]
name = "loom-wiki"            # PyPI 发布名（"loom" 大概率被占，M6 发布前最终确认）
version = "0.1.0"
description = "An embeddable, brainless toolkit that lets any agent maintain an LLM Wiki — weave your knowledge, not just notes."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "cczywyc" }]
keywords = ["llm", "wiki", "knowledge-base", "agent", "mcp", "markdown", "obsidian", "rag"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pydantic>=2.7",
  "click>=8.1",
  "pyyaml>=6",
  "filelock>=3.13",
  "jieba>=0.42",
  "rank-bm25>=0.2",
  "mcp>=1.2",
  "pdfplumber>=0.11",
  "beautifulsoup4>=4.12",
  "lxml>=5",
  "python-docx>=1.1",
]

[project.optional-dependencies]
auto = ["anthropic>=0.40", "openai>=1.40"]
vector = ["numpy>=1.26", "httpx>=0.27"]

[project.scripts]
loom = "loom.transport.cli:cli"

[project.urls]
Repository = "https://github.com/cczywyc/loom"
Changelog = "https://github.com/cczywyc/loom/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loom"]

# SKILL.md 在仓库根（便于浏览/作为 Agent Skill 入口），打包时随分发：
# 进 wheel 时落在 loom/ 下（可经 importlib.resources 定位），sdist 保持根路径。
[tool.hatch.build.targets.wheel.force-include]
"SKILL.md" = "loom/SKILL.md"

[tool.hatch.build.targets.sdist.force-include]
"SKILL.md" = "SKILL.md"

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "fpdf2>=2.7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["e2e: 需要真实 agent/人工参与的端到端验收，默认不跑"]
addopts = "-m 'not e2e'"

[tool.ruff]
line-length = 100
target-version = "py311"
